--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files  ": [
+            "tests/utilities/helpers.php"
+        ]
     },
     "extra": {
         "laravel": {
